--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "electron-quick-start",
   "version": "1.0.0",
   "description": "A minimal Electron application",
-  "main": "main.js",
+  "main": "electron.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "build": "electron-builder --mac",
+    "ship": "electron-builder --mac -p always"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
   "author": "GitHub",
-  "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^4.0.1"
+    "electron": "^4.0.1",
+    "electron-packager": "^13.0.1",
+    "electron-builder": "^20.38.4"
+  },
+  "repository": "",
+  "license": "MIT",
+  "dependencies": {
+    "electron-updater": "^4.0.6"
+  },
+  "build": {
+    "appId": "hello-my-app",
+    "mac": {
+      "category": "your.app.category.type"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   }
 }
