--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "GitHub",
   "devDependencies": {
     "electron": "^4.0.1",
-    "electron-packager": "^13.0.1",
-    "electron-builder": "^20.38.4"
+    "electron-packager": "13.0.1",
+    "electron-builder": "20.38.4"
   },
   "repository": "",
   "license": "MIT",
