--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "repository": "",
   "license": "MIT",
   "dependencies": {
-    "electron-updater": "^4.0.6"
+    "electron-updater": "4.0.6"
   },
   "build": {
     "appId": "hello-my-app",
